--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
   },
   "devDependencies": {
     "less": "^3.8.1",
-    "less-loader": "^4.1.0"
+    "less-loader": "^4.1.0",
+    "react-markdown": "^3.5.0"
   }
 }
