--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "qs": "^6.6.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-loadable": "5.4.0",
     "react-markdown": "^4.0.4",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "3.1.0"
@@ -27,6 +28,7 @@
     "@types/qs": "^6.5.1",
     "@types/react": "^16.7.11",
     "@types/react-dom": "^16.0.11",
+    "@types/react-loadable": "5.4.0",
     "@types/react-router-dom": "4.2.6",
     "react-app-rewire-less": "^2.1.3",
     "react-app-rewired": "^1.6.2",
